<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="test.beeloggerbluetooth.MainActivity">
    <item
        android:id="@+id/action_bt"
        android:icon="@drawable/my_bluetooth"
        android:title="Bluetooth"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="101"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_currentData"
        android:orderInCategory="102"
        android:title="@string/current_data"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="103"
        android:title="@string/help"
        app:showAsAction="never" />
</menu>