<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/MainFragment">

    <fragment
        android:id="@+id/SettingsFragment"
        android:name="test.beeloggerbluetooth.SettingsFragment"
        android:label="@string/settings_fragment_label"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_SettingsFragment_to_MainFragment"
            app:destination="@id/MainFragment" />
    </fragment>
    <fragment
        android:id="@+id/MainFragment"
        android:name="test.beeloggerbluetooth.MainFragment"
        android:label="@string/main_fragment_label"
        tools:layout="@layout/fragment_main">
    </fragment>
    <fragment
        android:id="@+id/currentDataFragment"
        android:name="test.beeloggerbluetooth.CurrentDataFragment"
        android:label="@string/fragment_current_data"
        tools:layout="@layout/fragment_current_data">
        <argument
            android:name="CurrentData"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/helpFragment"
        android:name="test.beeloggerbluetooth.HelpFragment"
        android:label="@string/fragment_help"
        tools:layout="@layout/fragment_help"/>
    <action
        android:id="@+id/action_global_MainFragment"
        app:destination="@id/MainFragment" />
    <action
        android:id="@+id/action_global_helpFragment"
        app:destination="@id/helpFragment" />
    <action
        android:id="@+id/action_global_currentDataFragment"
        app:destination="@id/currentDataFragment" />
    <action
        android:id="@+id/action_global_SettingsFragment"
        app:destination="@id/SettingsFragment" />
</navigation>